# codebase-onboard

./: .gitignore  LICENSE  README.md  RESEARCH.md  onboard.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codebase_onboard/: __init__.py  __main__.py  ai_enhancer.py  analyzer.py  cli.py  constants.py  graph.py  models.py
codebase_onboard/detectors/: __init__.py  api_endpoints.py  auth.py  cicd.py  database.py  docker.py  env_vars.py  test_coverage.py
codebase_onboard/generators/: __init__.py  html.py  json_output.py  markdown.py  terminal.py
examples/: express.md  fastapi.md  flask.html  flask.md
